RESOLVED FIXED139815
Element appears correctly but does not receive event with a large translation
https://bugs.webkit.org/show_bug.cgi?id=139815
Summary Element appears correctly but does not receive event with a large translation
Julien Quint
Reported 2014-12-19 06:24:42 PST
Created attachment 243549 [details] Failure case: the red box does not respond to click event. An element translated inside another translated div where both have a very large translation (e.g. translate3d(-41946499px, -28497722px, 0px) for the parent div, and translate3d(41946743px, 28497858px, 0px) for the child element) is displayed correctly but events such as "click" Attached are two files showing a reduction of this bug. In the failure case, the red box appears at the right position (the blue box in the corner is provided as a reference) but cannot be clicked. In the successful case, the green box appears and behaves as expected; the translation values are smaller than in the failing case, while still being pretty large.
Attachments
Failure case: the red box does not respond to click event. (828 bytes, text/html)
2014-12-19 06:24 PST, Julien Quint
no flags
Successful case, the green box can be clicked (824 bytes, text/html)
2014-12-19 06:25 PST, Julien Quint
no flags
Patch (5.29 KB, patch)
2015-01-15 20:09 PST, alan
no flags
Julien Quint
Comment 1 2014-12-19 06:25:22 PST
Created attachment 243550 [details] Successful case, the green box can be clicked
Radar WebKit Bug Importer
Comment 2 2014-12-19 06:26:52 PST
alan
Comment 3 2015-01-15 20:09:14 PST
WebKit Commit Bot
Comment 4 2015-01-15 22:13:51 PST
Comment on attachment 244745 [details] Patch Clearing flags on attachment: 244745 Committed r178574: <http://trac.webkit.org/changeset/178574>
WebKit Commit Bot
Comment 5 2015-01-15 22:14:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.